--- a/_config.yml
+++ b/_config.yml
@@ -101,3 +101,23 @@ deploy:
   root: /srv/blog
   port: 22
   delete: true
+
+
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  debug: false
+  model:
+    use: ./live2d_models/remu
+  display:
+    position: left
+    width: 150
+    height: 300
+  mobile:
+    show: true
+  react:
+    opacity: 0.7
