--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
     "scripts": {
-        "docs:dev": "vuepress dev docs",
-        "docs:build": "vuepress build docs"
+        "dev": "vuepress dev docs",
+        "build": "vuepress build docs"
     },
     "devDependencies": {
         "vuepress": "^1.3.0"
+    },
+    "dependencies": {
+        "vuepress-plugin-live2d-helper": "^1.0.5"
     }
 }
